# llm-tuner

./: .gitignore  LLM-Tuner.spec  README.md  main.py  out1.txt  pyproject.toml  requirements.txt
llmtuner/: app.py
llmtuner/core/: benchmark_runner.py  benchmark_thread.py  config_export.py  constants.py  model_db.py  recommender.py  system_info.py
llmtuner/data/: models.json  use_cases.json
llmtuner/ui/: benchmark.py  config_panel.py  export_launch.py  main_window.py  model_browser.py  system_scan.py
llmtuner/utils/: logger.py  persistence.py
tests/: test_persistence.py  test_recommender.py  test_system_info.py
