[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "llm-tuner"
version = "1.0.0"
description = "AI-powered LLM configuration optimizer for llama.cpp, Ollama, and vLLM"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "PySide6>=6.7.0",
    "psutil>=5.9.0",
    "GPUtil>=1.4.0",
    "requests>=2.31.0",
    "py-cpuinfo>=9.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pyinstaller>=6.0.0", "build"]

[project.scripts]
llm-tuner = "llmtuner.app:cli_main"

[tool.setuptools.packages.find]
include = ["llmtuner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
